--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,5 @@ jobs:
           DOCKER_LOGIN: ${{ secrets.DOCKER_LOGIN }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
           BUILD_PARENTS: ${{ github.event.inputs.build_parents }}
+          DOCKER_PLATFORM: linux/amd64
         run: bash ./run github:build_and_push
